# skillspector-action

./: .dockerignore  .gitignore  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml  publish-image.yml
docs/: advanced-usage.md  maintainer.md
docs/superpowers/plans/: 2026-06-21-skillspector-action-implementation.md
docs/superpowers/specs/: 2026-06-21-skillspector-action-design.md
scripts/: entrypoint.sh  run-action.sh
src/skillspector_action/: __main__.py  baseline.py  config.py  discovery.py  gitdiff.py  reports.py  runner.py
tests/: test_action_metadata.py  test_baseline.py  test_cli.py  test_discovery.py  test_gitdiff.py  test_policy.py  test_readme.py  test_reports.py  test_workflows.py
