[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "skillspector-action"
version = "0.1.0"
description = "GitHub Action wrapper for SkillSpector"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8", "PyYAML>=6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
